cmake_minimum_required(VERSION 3.5)
project(autogen)

set(CMAKE_CXX_STANDARD 20)
include_directories(ecs\include\Components.Vanilla ecs\include\Components.Vanilla ./metadata/include/ ./ecs/include/ ./ecs/raylib/src/ ./ecs/raylib/examples/shapes/ ./server/include/)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ecs\include\Components.Vanilla)
set(CMAKE_LIBRARY_PATH ${CMAKE_LIBRARY_PATH}  ${CMAKE_CURRENT_SOURCE_DIR}/../build/)
link_directories(
)
add_library(Animator SHARED ecs\include\Components.Vanilla\Animator.hpp .././.metadata/AnimatorMeta.cpp ecs\include\Components.Vanilla/Animator.cpp)
add_library(AudioSource SHARED ecs\include\Components.Vanilla\AudioSource.hpp .././.metadata/AudioSourceMeta.cpp ecs\include\Components.Vanilla/AudioSource.cpp)
add_library(Collider2D SHARED ecs\include\Components.Vanilla\Collider2D.hpp .././.metadata/Collider2DMeta.cpp ecs\include\Components.Vanilla/Collider2D.cpp)
add_library(CoreTransform SHARED ecs\include\Components.Vanilla\CoreTransform.hpp .././.metadata/CoreTransformMeta.cpp ecs\include\Components.Vanilla/CoreTransform.cpp)
add_library(EventGraph SHARED ecs\include\Components.Vanilla\EventGraph.hpp .././.metadata/EventGraphMeta.cpp ecs\include\Components.Vanilla/EventGraph.cpp)
add_library(NodePrintStr SHARED ecs\include\Components.Vanilla\NodePrintStr.hpp .././.metadata/NodePrintStrMeta.cpp ecs\include\Components.Vanilla/NodePrintStr.cpp)
add_library(NodeStr SHARED ecs\include\Components.Vanilla\NodeStr.hpp .././.metadata/NodeStrMeta.cpp ecs\include\Components.Vanilla/NodeStr.cpp)
add_library(RigidBody2D SHARED ecs\include\Components.Vanilla\RigidBody2D.hpp .././.metadata/RigidBody2DMeta.cpp ecs\include\Components.Vanilla/RigidBody2D.cpp)
add_library(SplashIcon SHARED ecs\include\Components.Vanilla\SplashIcon.hpp .././.metadata/SplashIconMeta.cpp ecs\include\Components.Vanilla/SplashIcon.cpp)
add_library(Tag SHARED ecs\include\Components.Vanilla\Tag.hpp .././.metadata/TagMeta.cpp ecs\include\Components.Vanilla/Tag.cpp)
add_library(TextField SHARED ecs\include\Components.Vanilla\TextField.hpp .././.metadata/TextFieldMeta.cpp ecs\include\Components.Vanilla/TextField.cpp)
add_library(UIButton SHARED ecs\include\Components.Vanilla\UIButton.hpp .././.metadata/UIButtonMeta.cpp ecs\include\Components.Vanilla/UIButton.cpp)
add_library(UIDiv SHARED ecs\include\Components.Vanilla\UIDiv.hpp .././.metadata/UIDivMeta.cpp ecs\include\Components.Vanilla/UIDiv.cpp)
add_library(UIMenu SHARED ecs\include\Components.Vanilla\UIMenu.hpp .././.metadata/UIMenuMeta.cpp ecs\include\Components.Vanilla/UIMenu.cpp)
add_compile_options(-g3)
